--- a/app/views/signup/index.html.erb
+++ b/app/views/signup/index.html.erb
@@ -1,9 +1,12 @@
-<h1>sign up</h1>
+<div class="main-container blue">
+    <div class="form-container">
+        <h1 class="form-title">Sign Up</h1>
 
-<%= form_for(:user, url: {controller: "signup", action: "create"}) do |f| %>
-    <%= f.text_field :email, placeholder: "Email" %> <br>
-    <%= f.password_field :password, placeholder: "Password" %> <br>
-    <%= f.text_field :name, placeholder: "name" %> <br>
-    <%= f.text_field :birthday, placeholder: "birthday" %> <br>
-    <%= f.submit :Signup %>
-<% end %>
+        <%= form_for(:user, url: {controller: "signup", action: "create"}) do |f| %>
+            <%= f.text_field :email, placeholder: "Email", class: "input-field" %> <br>
+            <%= f.password_field :password, placeholder: "Password", class: "input-field" %> <br>
+            <%= f.text_field :name, placeholder: "Name", class: "input-field" %> <br>
+            <%= f.text_field :birthday, placeholder: "Birthday", class: "input-field" %> <br>
+            <%= f.submit :Signup, class: "submit-btn" %>
+        <% end %>
+</div>
