--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,11 @@
  *= require_self
  */
 
+@font-face {
+    font-family: "Shoryuken";
+    src: url('Shoryuken.ttf') format('truetype');
+}
+
  html {
     min-height: 100vh;
     min-width: 100vw;
@@ -37,10 +42,12 @@
 }
 
 nav {
-    height:7%;
+    height:10%;
     width: 100vw;
 
-    background-color: grey;
+    background-color: rgba(49, 49, 49, 0.95);
+
+    box-shadow:3px 3px 15px rgba(0, 0, 0, .6);
 
     display: grid;
 
@@ -66,14 +73,17 @@ nav {
 
     padding: 0% 3%;
 
-    font-size: large;
+    font-size: larger;
+    font-style: italic;
 
     color: whitesmoke;
+
+    text-decoration: none;
 
     display: flex;
     align-items: center;
 
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 .nav-bar-links {
@@ -90,7 +100,8 @@ nav {
     height: 100%;
     width: auto;
 
-    padding: 0% 3%;
+    padding: 0% 1%;
+    margin: 0% 1%;
 
     font-size: large;
 
@@ -133,7 +144,7 @@ nav {
     width: 100px;
 
     padding: 0% 0%;
-    margin: 1.25% 3%;
+    margin: 2.25% 3%;
 
     border-radius: 5px;
 
@@ -160,9 +171,152 @@ nav {
 main{    
     height: 100vh;
     width: 100vw;
-
-    padding-top: 3%;
-
-    background-color: rgba(0, 0, 0, .6);
 }
 
+.jumbotron {
+    height: 100vh;
+    width: 100vw;
+
+    padding: 0;
+    margin: 0;
+
+    background-image: url("jake-paul-boxing.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center top;
+}
+
+.overlay {
+    height: 100%;
+    width: 100%;
+
+    background: radial-gradient(circle at 25% 50%, rgba(0, 0, 0, 0), rgba(0, 0, 0, .6));
+}
+
+.jumbotron-section {
+    height: auto;
+    width: auto;
+
+    padding: 0%;
+    margin: 0%;
+
+    color: whitesmoke;
+
+    font-size: 3em;
+
+    position: absolute;
+
+    top: 33%;
+    left: 45%;
+}
+
+.jumbotron-title {
+    font-style: italic;
+
+    font-size: 4em;
+
+    line-height: .05;
+}
+
+.jumbotron-subtitle {
+    height: auto;
+    width: auto;
+}
+
+.main-container {
+    height: 100%;
+    width: 100%;
+
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+}
+
+.form-container {
+    height: auto;
+    width: 40%;
+
+    padding: 3% 0%;
+    margin: 0%;
+
+    text-align: center;
+
+    background-color: whitesmoke;
+
+    border-radius: 15px;
+    box-shadow: 3px 3px 15px rgba(0, 0, 0, .6);
+}
+
+.form-title {
+    font-size: 4em;
+
+    text-decoration: underline dodgerblue;
+    line-height: .75;
+
+    padding: 0%;
+
+    color: rgba(0, 0, 0, .85);
+
+
+}
+
+.input-field {
+    height: auto;
+    width: 50%;
+
+    padding: 1.5% 3%;
+    margin: 1.5% 0%;
+
+    border: .5px solid grey;
+    box-shadow: .5px .5px 5px rgba(0, 0, 0, .6);
+    border-radius: 25px;
+}
+
+.submit-btn {
+    height: auto;
+    width: auto;
+
+    padding: 3% 25%;
+    margin-top: 3%;
+
+    color: whitesmoke;
+
+    background-color: rgba(0, 0, 0, 0.45);
+
+    border: none;
+    border-radius: 20px;
+}
+
+.blue {
+    background-color: dodgerblue;
+}
+
+.container {
+    height: auto;
+    width: 75%;
+}
+
+.main-container-title {
+    height: auto;
+    width: auto;
+
+    font-size: 5em;
+
+    text-align: center;
+
+    color: whitesmoke;
+}
+
+.post-container {
+    height: auto;
+    width: 100%;
+
+    padding: 2% 3%;
+    margin: 3% 0%;
+
+    background-color: whitesmoke;
+
+    border-radius: 15px;
+    box-shadow: 3px 3px 15px rgba(0, 0, 0, .6);
+}
