--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <nav class="nav-bar">
       <div class="nav-bar-logo">
-        <%= link_to "Logo", root_path, class: "logo" %>
+        <%= link_to "R", root_path, class: "logo" %>
       </div>
       <div class="nav-bar-links">
         <%= link_to "Home", root_path, class: "link" %>
