--- a/app/views/post/new.html.erb
+++ b/app/views/post/new.html.erb
@@ -1,5 +1,11 @@
-<%= form_for(:post, url: {controller: "post", action: "create"}) do |f| %>
-    <%= f.text_field :title, placeholder: "Title" %> <br>
-    <%= f.text_area :body, placeholder: "Whats on your mind?" %> <br>
-    <%= f.submit :submit %>
-<% end %>
+<div class="main-container blue">
+    <div class="form-container">
+
+        <h1 class="form-title">New Post</h1>
+        <%= form_for(:post, url: {controller: "post", action: "create"}) do |f| %>
+            <%= f.text_field :title, placeholder: "Title", class: "input-field" %> <br>
+            <%= f.text_area :body, placeholder: "Whats on your mind?", class: "input-field" %> <br>
+            <%= f.submit :submit, class: "submit-btn" %>
+        <% end %>
+    </div>
+</div>
