--- a/app/views/post/show.html.erb
+++ b/app/views/post/show.html.erb
@@ -1,11 +1,11 @@
-<h1>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</h1>
- 
-<h3>
-  <strong>Text:</strong>
-  <%= @post.body %>
-</h3>
+<div class="main-container blue">
+  <div class="container">
+    <div class="post-container">
+      <h1><%= @post.title %></h1>
+      <hr>
+      <h3><%= @post.body %></h3>
 
-<%= link_to "dashboard", {controller: "user", action: "index"} %>
+      <%= link_to "dashboard", {controller: "user", action: "index"} %>
+    </div>
+  </div>
+</div>
