--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -1,9 +1,16 @@
-<h1>Welcome <%= session[:user_id] %></h1>
+<div class="main-container blue">
+    <div class="container">
+        <h1 class="main-container-title">Welcome <%= @username %></h1>
 
-<%= link_to "New Post", {controller: "post", action:"new"} %>
-
-<% @posts.each do |post| %>
-    <h3><%= post.title %></h3>
-    <h6><%= post.body %></h6>
-    <%= link_to "Show", post_path(post) %>
-<% end %>
+        <%= link_to "New Post", {controller: "post", action:"new"} %>
+        
+        <% @posts.each do |post| %>
+            <div class="post-container">
+                <h1 class="post-title"><%= post.title %></h1>
+                <hr>
+                <h3 class="post-body"><%= post.body %></h3>
+                <%= link_to "Show", post_path(post) %>
+            </div>
+        <% end %>
+    </div>
+</div>
