--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -13,7 +13,7 @@
 <div class="main-container blue">
     <div class="form-container">
         <h1 class="form-title">Login</h1>
-        <%= form_for(:user) do |f| %>
+        <%= form_for(:login, url: {controller: "login", action: "create"}) do |f| %>
             <%= f.text_field :email, placeholder: "Email", class: "input-field" %> <br>
             <%= f.password_field :password, placeholder: "Password", class: "input-field"%> <br>
             <%= f.submit "Login", class: "submit-btn" %>
