--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,18 +1,13 @@
-<% if @user.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@user.errors.count, "error") %> prohibited this article from being saved:</h2>
- 
-    <ul>
-    <% @user.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
-
 <div class="main-container blue">
     <div class="form-container">
         <h1 class="form-title">Login</h1>
+        <% if @error %>
+          <div id="error_explanation">
+            <h2>prohibited this article from being saved:</h2>
+
+            <%= @error %>
+          </div>
+        <% end %>
         <%= form_for(:user, url: {controller: "login", action: "create"}) do |f| %>
             <%= f.text_field :email, placeholder: "Email", class: "input-field" %> <br>
             <%= f.password_field :password, placeholder: "Password", class: "input-field"%> <br>
