--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -224,8 +224,11 @@ main{
 }
 
 .main-container {
-    height: 100%;
+    min-height: 100%;
     width: 100%;
+
+    padding: 5% 0%;
+    margin: 0%;
 
     display: flex;
 
