added some more styling

--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -2,14 +2,13 @@
     <div class="container">
         <h1 class="main-container-title">Welcome <%= @user.name %></h1>
 
-        <%= link_to "New Post", {controller: "post", action:"new"} %>
+        <%= link_to "+", {controller: "post", action:"new"}, id: "new-post" %>
         
         <% @posts.each do |post| %>
             <div class="post-container">
-                <h1 class="post-title"><%= post.title %></h1>
+                <h1 class="post-title"><%= link_to post.title, post_path(post), class: "post-title" %></h1>
                 <hr>
                 <h3 class="post-body"><%= post.body %></h3>
-                <%= link_to "Show", post_path(post) %>
             </div>
         <% end %>
     </div>
