--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -297,7 +297,7 @@ main{
 
 .container {
     height: auto;
-    width: 75%;
+    width: 60%;
 }
 
 .main-container-title {
@@ -322,4 +322,44 @@ main{
 
     border-radius: 15px;
     box-shadow: 3px 3px 15px rgba(0, 0, 0, .6);
+}
+
+.post-title {
+    height: auto;
+    margin: auto;
+
+    padding: 1.5% 0%;
+    margin: 0%;
+
+    color: rgba(49, 49, 49, 0.85);
+
+    text-decoration: none;
+}
+
+#new-post{
+    height: 75px;
+    width: 75px;
+
+    padding: 0;
+    margin: 3%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    color: rgba(0, 0, 0, 0.85);
+
+    font-size: 4em;
+
+    text-decoration: none;
+
+    background-color: whitesmoke;
+
+    border-radius: 50%;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, .6);
+
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+
 }
