--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -297,7 +297,15 @@ main{
 
 .container {
     height: auto;
-    width: 60%;
+    width: 80%;
+}
+
+.posts-container {
+    height: auto;
+    width: 100%;
+
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .main-container-title {
@@ -306,17 +314,15 @@ main{
 
     font-size: 5em;
 
-    text-align: center;
-
     color: whitesmoke;
 }
 
 .post-container {
     height: auto;
-    width: 100%;
+    width: fit-content;
 
     padding: 2% 3%;
-    margin: 3% 0%;
+    margin: 3% 3%;
 
     background-color: whitesmoke;
 
