--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,11 @@
         <%= link_to "R", root_path, class: "logo" %>
       </div>
       <div class="nav-bar-links">
-        <%= link_to "Home", root_path, class: "link" %>
-        <%= link_to "Contact Us", {controller: "welcome", action: "contactUs"}, class: "link" %>
-        <%= link_to "About Us", {controller: "welcome", action: "aboutUs"}, class: "link" %>
+        <% if session[:user_id].nil? %>
+          <%= link_to "Home", root_path, class: "link" %>
+        <% else %>
+          <%= link_to "Home", {controller: "user", action: "index"}, class: "link" %>
+        <% end %>
         <% if session[:user_id].nil? %>
           <div class="sign-in-options">
             <%= link_to "Log In", {controller: "login", action: "index"}, class: "btn" %>
