A user can upload a profile pic and it can be viewed on the user index page as well as check if there are any posts asociated with the user and if there arent any then prompts the user to use the new post button

--- a/app/views/signup/index.html.erb
+++ b/app/views/signup/index.html.erb
@@ -19,6 +19,7 @@
           <%= f.password_field :password, placeholder: "Password", class: "input-field" %> <br>
           <%= f.text_field :name, placeholder: "Name", class: "input-field" %> <br>
           <%= f.text_field :birthday, placeholder: "Birthday", class: "input-field" %> <br>
+          <%= f.file_field :profile_pic, class: "input-field"  %> <br>
           <%= f.submit :Signup, class: "submit-btn" %>
       <% end %>
     </div>
@@ -35,6 +36,7 @@
           <%= f.password_field :password, placeholder: "Password", class: "input-field" %> <br>
           <%= f.text_field :name, placeholder: "Name", class: "input-field" %> <br>
           <%= f.text_field :birthday, placeholder: "Birthday", class: "input-field" %> <br>
+          <%= f.file_field :profile_pic, class: "input-field"  %> <br>
           <%= f.submit :Signup, class: "submit-btn" %>
       <% end %>
     </div>
