--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -224,10 +224,10 @@ main{
 }
 
 .main-container {
-    min-height: 100%;
-    width: 100%;
+    min-height: 100vh;
+    width: 100vw;
 
-    padding: 5% 0%;
+    padding: 0% 0%;
     margin: 0%;
 
     display: flex;
@@ -368,4 +368,23 @@ main{
     bottom: 0px;
     right: 0px;
 
+}
+
+.profile-container {
+    display: flex;
+
+    justify-content: start;
+    align-items: center;
+}
+
+.profile-pic {
+    height: 15%;
+    width: 15%;
+
+    padding:0;
+    margin: 3%;
+
+    border-radius: 50%;
+
+    box-shadow: 3px 3px 15px rgba(0, 0, 0, .6);
 }
