--- a/app/views/post/new.html.erb
+++ b/app/views/post/new.html.erb
@@ -1,5 +1,5 @@
 <% if @post.errors.any? %>
-  <div class="main-container blue">
+  <div class="main-container img">
     <div class="form-container">
 
         <h1 class="form-title">New Post</h1>
@@ -22,7 +22,7 @@
     </div>
 </div>
 <% else %>
-  <div class="main-container blue">
+  <div class="main-container img">
     <div class="form-container">
 
         <h1 class="form-title">New Post</h1>
