--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,7 +34,7 @@
 }
 
  body {
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
 
     padding: 0;
@@ -45,7 +45,7 @@ nav {
     height:10%;
     width: 100vw;
 
-    background-color: rgba(49, 49, 49, 0.95);
+    background-color: rgba(49, 49, 49, 1);
 
     box-shadow:3px 3px 15px rgba(0, 0, 0, .6);
 
@@ -57,6 +57,8 @@ nav {
 
     top: 0;
     left: 0;
+
+    z-index:2;
 }
 
 .nav-bar-logo {
@@ -160,7 +162,20 @@ nav {
     text-decoration: none;
 }
 
-.blue{
+.img{
+    background-image: url("https://picsum.photos/800");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    position: fixed;
+    top: 0px;
+    left: 0px;
+
+    z-index: 0;
+}
+
+.blue {
     background-color: dodgerblue;
 }
 
@@ -169,7 +184,7 @@ nav {
 }
 
 main{    
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
 }
 
@@ -180,15 +195,20 @@ main{
     padding: 0;
     margin: 0;
 
-    background-image: url("jake-paul-boxing.jpg");
+    background-image: url("https://picsum.photos/800");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center top;
+    background-position: center center;
 }
 
 .overlay {
-    height: 100%;
+    min-height: 100%;
     width: 100%;
+
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
 
     background: radial-gradient(circle at 25% 50%, rgba(0, 0, 0, 0), rgba(0, 0, 0, .6));
 }
@@ -200,14 +220,16 @@ main{
     padding: 0%;
     margin: 0%;
 
+    text-shadow: 3px 3px 15px rgba(0, 0, 0, .6);
+
     color: whitesmoke;
 
     font-size: 3em;
 
     position: absolute;
 
-    top: 33%;
-    left: 45%;
+    top: 15%;
+    left: 5%;
 }
 
 .jumbotron-title {
@@ -224,11 +246,11 @@ main{
 }
 
 .main-container {
-    min-height: 100vh;
+    height: 100vh;
     width: 100vw;
 
     padding: 0% 0%;
-    margin: 0%;
+    margin: 0% 0%;
 
     display: flex;
 
@@ -298,6 +320,16 @@ main{
 .container {
     height: auto;
     width: 80%;
+
+    padding: 7% 0%;
+    margin: 0% 11%;
+
+    position: absolute;
+
+    top: 0;
+    left: 0;
+
+    z-index: 1;
 }
 
 .posts-container {
@@ -378,7 +410,7 @@ main{
 }
 
 .profile-pic {
-    height: 15%;
+    height: auto;
     width: 15%;
 
     padding:0;
