--- a/app/views/login/new.html.erb
+++ b/app/views/login/new.html.erb
@@ -1,4 +1,5 @@
-<div class="main-container blue">
+<div class="main-container img">
+  <div class = "overlay">
     <div class="form-container">
         <h1 class="form-title">Login</h1>
         <% if @error %>
@@ -14,4 +15,5 @@
             <%= f.submit "Login", class: "submit-btn" %>
         <% end %>
     </div>
+  </div>
 </div>
