--- a/app/views/post/index.html.erb
+++ b/app/views/post/index.html.erb
@@ -1,36 +1,40 @@
 <% if @post.errors.any? %>
-  <div class="main-container blue">
-    <div class="form-container">
+  <div class="main-container img">
+    <div class="overlay">
+      <div class="form-container">
 
-        <h1 class="form-title">New Post</h1>
+          <h1 class="form-title">New Post</h1>
 
-        <div id="error_explanation">
-          <h2><%= pluralize(@post.errors.count, "error") %> prohibited this article from being saved:</h2>
-      
-          <ul>
-          <% @post.errors.full_messages.each do |msg| %>
-            <p><%= msg %></p>
+          <div id="error_explanation">
+            <h2><%= pluralize(@post.errors.count, "error") %> prohibited this article from being saved:</h2>
+        
+            <ul>
+            <% @post.errors.full_messages.each do |msg| %>
+              <p><%= msg %></p>
+            <% end %>
+            </ul>
+          </div>
+
+          <%= form_for(:post, url: {controller: "post", action: "create"}) do |f| %>
+              <%= f.text_field :title, placeholder: "Title", class: "input-field" %> <br>
+              <%= f.text_area :body, placeholder: "Whats on your mind?", class: "input-field" %> <br>
+              <%= f.submit :submit, class: "submit-btn" %>
           <% end %>
-          </ul>
-        </div>
-
-        <%= form_for(:post, url: {controller: "post", action: "create"}) do |f| %>
-            <%= f.text_field :title, placeholder: "Title", class: "input-field" %> <br>
-            <%= f.text_area :body, placeholder: "Whats on your mind?", class: "input-field" %> <br>
-            <%= f.submit :submit, class: "submit-btn" %>
-        <% end %>
+      </div>
     </div>
-</div>
+  </div>
 <% else %>
-  <div class="main-container blue">
-    <div class="form-container">
+  <div class="main-container img">
+    <div class="overlay">
+      <div class="form-container">
 
-        <h1 class="form-title">New Post</h1>
-        <%= form_for(:post, url: {controller: "post", action: "create"}) do |f| %>
-            <%= f.text_field :title, placeholder: "Title", class: "input-field" %> <br>
-            <%= f.text_area :body, placeholder: "Whats on your mind?", class: "input-field" %> <br>
-            <%= f.submit :submit, class: "submit-btn" %>
-        <% end %>
+          <h1 class="form-title">New Post</h1>
+          <%= form_for(:post, url: {controller: "post", action: "create"}) do |f| %>
+              <%= f.text_field :title, placeholder: "Title", class: "input-field" %> <br>
+              <%= f.text_area :body, placeholder: "Whats on your mind?", class: "input-field" %> <br>
+              <%= f.submit :submit, class: "submit-btn" %>
+          <% end %>
+      </div>
     </div>
-</div>
+  </div>
 <% end %>
