--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
             <%= link_to "Sign Up", {controller: "signup", action: "index"}, class: "btn blue last-btn" %>
           </div>
         <% else %>
-          <%= link_to "log Out", {controller: "user", action: "logout"}, class: "btn-logout last-btn" %>
+          <%= link_to "log Out", {controller: "logout", action: "index"}, class: "btn-logout last-btn" %>
         <% end %>
       </div>
     </nav>
