--- a/app/views/signup/index.html.erb
+++ b/app/views/signup/index.html.erb
@@ -2,17 +2,20 @@
   
   <div class="main-container img">
     <div class="overlay">
-      <div class="form-container">
+      
+    </div>
+  </div>
+
+  <div class="container">
+  <div class="form-container">
         <h1 class="form-title">Sign Up</h1>
 
         <div id="error_explanation">
           <h2><%= pluralize(@user.errors.count, "error") %> prohibited this article from being saved:</h2>
 
-          <ul>
             <% @user.errors.full_messages.each do |msg| %>
-              <li><%= msg %></li>
+              <p class="error"><%= msg %></p>
             <% end %>
-          </ul>
         </div>
 
         <%= form_for(:user, url: {controller: "signup", action: "create"}) do |f| %>
@@ -20,17 +23,20 @@
             <%= f.password_field :password, placeholder: "Password", class: "input-field" %> <br>
             <%= f.text_field :name, placeholder: "Name", class: "input-field" %> <br>
             <%= f.text_field :birthday, placeholder: "Birthday", class: "input-field" %> <br>
+            <%= f.file_field :profile_pic, class: "input-field" %> <br>
             <%= f.submit :Signup, class: "submit-btn" %>
         <% end %>
       </div>
-    </div>
   </div>
-
 
 <% else %>
   <div class="main-container img">
     <div class="overlay">
-      <div class="form-container">
+      
+    </div>
+  </div>
+
+  <div class="form-container">
         <h1 class="form-title">Sign Up</h1>
 
         <%= form_for(:user, url: {controller: "signup", action: "create"}) do |f| %>
@@ -38,9 +44,8 @@
             <%= f.password_field :password, placeholder: "Password", class: "input-field" %> <br>
             <%= f.text_field :name, placeholder: "Name", class: "input-field" %> <br>
             <%= f.text_field :birthday, placeholder: "Birthday", class: "input-field" %> <br>
+            <%= f.file_field :profile_pic, class: "input-field" %> <br>
             <%= f.submit :Signup, class: "submit-btn" %>
         <% end %>
       </div>
-    </div>
-  </div>
 <% end %>
