--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -267,7 +267,7 @@ main{
     width: 40%;
 
     padding: 3% 0%;
-    margin: 11% 0%;
+    margin: 3% 0%;
 
     text-align: center;
 
@@ -400,7 +400,13 @@ main{
     padding: 0%;
     margin: 0% 7%;
 
+    color: rgba(0, 0, 0, .85);
+
+    text-decoration: none;
+
     font-weight: bold;
+
+    font-size: 1.5em;
 }
 
 .post-title {
