--- a/app/views/signup/new.html.erb
+++ b/app/views/signup/new.html.erb
@@ -5,7 +5,7 @@
       
     </div>
   </div>
-  <div class="form-container">
+  <div class="form-container" style="margin-top: 13%">
         <h1 class="form-title">Sign Up</h1>
 
         <div id="error_explanation">
